RESOLVED FIXED205771
[LFC][Integration] Fix compositing/masks/compositing-clip-path-change-no-repaint.html
https://bugs.webkit.org/show_bug.cgi?id=205771
Summary [LFC][Integration] Fix compositing/masks/compositing-clip-path-change-no-repa...
alan
Reported 2020-01-04 17:14:18 PST
ssia
Attachments
Patch (2.17 KB, patch)
2020-01-04 17:24 PST, alan
no flags
Patch (2.21 KB, patch)
2020-01-05 06:25 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2020-01-04 17:14:40 PST
alan
Comment 2 2020-01-04 17:24:26 PST
Antti Koivisto
Comment 3 2020-01-05 00:00:12 PST
Comment on attachment 386776 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=386776&action=review > Source/WebCore/ChangeLog:3 > + [LFC][IFC] Fix compositing/masks/compositing-clip-path-change-no-repaint.html [LFC][Integration]
Antti Koivisto
Comment 4 2020-01-05 00:07:19 PST
Comment on attachment 386776 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=386776&action=review > Source/WebCore/rendering/RenderBlockFlow.cpp:-2090 > if (diff >= StyleDifference::Repaint) { > - // FIXME: This could use a cheaper style-only test instead of SimpleLineLayout::canUseFor. > - if (selfNeedsLayout() || !simpleLineLayout() || !SimpleLineLayout::canUseFor(*this)) If we don't redo the layout then we need to push the style change to LFC too.
alan
Comment 5 2020-01-05 06:25:30 PST
WebKit Commit Bot
Comment 6 2020-01-05 07:13:15 PST
Comment on attachment 386785 [details] Patch Clearing flags on attachment: 386785 Committed r254041: <https://trac.webkit.org/changeset/254041>
WebKit Commit Bot
Comment 7 2020-01-05 07:13:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.