[LFC][Integration] Fix compositing/masks/compositing-clip-path-change-no-repaint.html https://bugs.webkit.org/show_bug.cgi?id=205771 <rdar://problem/58319828>

Reviewed by Antti Koivisto.

Add LFC line layout check when deciding whether the current layout path needs
invalidation after style change.

Original patch by Antti.

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::styleDidChange):


Canonical link: https://commits.webkit.org/218916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254041 268f45cc-cd09-0410-ab3c-d52691b4dbfc